fixed css for weather overflow

--- a/main.sass
+++ b/main.sass
@@ -40,7 +40,7 @@ body
         grid-area: c
     #weather
         grid-area: e
-        font-size: 90px
+        font-size: 80px
         text-align: left
         p
             margin: 0
